--- a/example4/index.html
+++ b/example4/index.html
@@ -9,9 +9,7 @@
         <!-- We can embed content from another with several different html elements -->
         <!-- Here is a decent comparison -->
         <!-- https://stackoverflow.com/a/21115112/2179399 -->
-        <h2>iframe element</h2>
-        <iframe src="../example1/" width="500" height="500"></iframe>
         <h2>embed element</h2>
-        <embed src="../example3.2/" width="500" height="500"></embed>
+        <embed src="../AssgM_2/" width="500" height="500"></embed>
 	</body>
 </html>
