--- a/example4/index.html
+++ b/example4/index.html
@@ -5,13 +5,11 @@
 		<title>S1 - Lecture 2 - Example 4</title>
 	</head>
 	<body>
-        <h1>This is an example of several ways to embed content from other sources</h1>
+        <h1>This is assignment2</h1>
         <!-- We can embed content from another with several different html elements -->
         <!-- Here is a decent comparison -->
         <!-- https://stackoverflow.com/a/21115112/2179399 -->
-        <h2>iframe element</h2>
-        <iframe src="../example1/" width="500" height="500"></iframe>
-        <h2>embed element</h2>
-        <embed src="../example3.2/" width="500" height="500"></embed>
+        <h2>embed model</h2>
+        <embed src="../AssgM_2/" width="500" height="500"></embed>
 	</body>
 </html>
